# dct-agent

./: .flake8  .gitignore  AGENT.md  CLAUDE.md  LICENSE  NO_TEMP_SCRIPTS.md  README.md  fix_flake8.py  fix_flake8.sh  fix_flake8_ignore.sh  fix_lines.sh  fix_unused.sh  patch_main.py  patch_probe.py  patch_registry.py  patch_shell.py  patch_tests.py  project_context.txt  pyproject.toml  setup_tools.sh  test.json  test_server.py
.claude/: settings.local.json
.dct/: project.md
.github/workflows/: publish.yml  python-app.yml
dct/: __init__.py  __main__.py
dct/agent/: codeagent.py  parser.py  session.py
dct/cli/: clipboard.py  display.py  help.py  main.py  shell.py
dct/core/: client.py  config.py  http.py  logging.py  mcp.py  memory.py  ollama.py  openrouter.py  probe.py  registry.py  theme.py  theme.py.bak
dct/skills/: __init__.py  notebook.py  web.py
dct/tools/: executor.py  files.py  image.py  lsp.py  tasks.py  url_validator.py  web.py
tests/: test_agent_parser.py  test_agent_tools.py  test_background_tasks.py  test_config.py  test_image.py  test_multi_patch.py  test_providers.py  test_read_file.py  test_registry.py  test_security.py  test_session.py  test_tools_web.py
